spacing fix

--- a/ui.apps/src/main/content/jcr_root/apps/chinational/clientlibs/clientlib-site/css/base.css
+++ b/ui.apps/src/main/content/jcr_root/apps/chinational/clientlibs/clientlib-site/css/base.css
@@ -18,6 +18,16 @@
 	margin-bottom:30px; 
 }
 
+.full-width-container .width-for-gray-line {
+	margin-left: calc(-8.7vw / 2);
+	margin-right: calc(-8.7vw / 2);
+}
+
+.right-rail-container .width-for-gray-line {
+	margin-left: .1%;
+	margin-right: .1%;
+}
+
 .gray-margin-top {
 	background-color: gray;
 }
